// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NativeDateField should apply the correct styling, HTML attributes, and allow a ref 1`] = `
<input
  class="rmd-text-field rmd-text-field--placeholder-hidden"
  id="text-field-:r0:"
  name="field"
  placeholder=" "
  type="date"
  value=""
/>
`;

exports[`NativeDateField should apply the correct styling, HTML attributes, and allow a ref 2`] = `
<input
  class="rmd-text-field rmd-text-field--placeholder-hidden"
  id="text-field-:r0:"
  name="field"
  placeholder=" "
  type="date"
  value=""
/>
`;

exports[`NativeDateField should support an error state 1`] = `
<div
  class="rmd-text-field-container rmd-text-field-container--outline rmd-text-field-container--hoverable rmd-text-field-container--label"
  data-testid="container"
>
  <input
    class="rmd-text-field rmd-text-field--placeholder-hidden"
    id="text-field-:r6:"
    name="field"
    placeholder=" "
    type="date"
    value=""
  />
  <label
    class="rmd-label rmd-label--floating"
    for="text-field-:r6:"
  >
    Date
  </label>
</div>
`;

exports[`NativeDateField should support the disabled state 1`] = `
<div
  class="rmd-text-field-container rmd-text-field-container--outline rmd-text-field-container--disabled rmd-text-field-container--label rmd-text-disabled-color"
  data-testid="container"
>
  <input
    class="rmd-text-field rmd-text-field--placeholder-hidden"
    disabled=""
    id="text-field-:r4:"
    name="field"
    placeholder=" "
    type="date"
    value=""
  />
  <label
    class="rmd-label rmd-label--disabled rmd-label--floating rmd-text-disabled-color"
    for="text-field-:r4:"
  >
    Date
  </label>
</div>
`;

exports[`NativeDateField should support the readOnly state 1`] = `
<div
  class="rmd-text-field-container rmd-text-field-container--outline rmd-text-field-container--disabled rmd-text-field-container--hoverable rmd-text-field-container--label"
  data-testid="container"
>
  <input
    class="rmd-text-field rmd-text-field--placeholder-hidden"
    id="text-field-:r2:"
    name="field"
    placeholder=" "
    readonly=""
    type="date"
    value=""
  />
  <label
    class="rmd-label rmd-label--floating"
    for="text-field-:r2:"
  >
    Date
  </label>
</div>
`;
